--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body{
+  background-color: #F7F7F9;
+}
 .container {
   display: flex;
   flex-direction: column;
@@ -17,11 +21,12 @@
 }
 
 #movieSelect {
-  background-color: grey;
+  background-color: #6c757d;
   font-size: 20px;
   appearance: none;
   margin-left: 10px;
   padding: 5px 15px;
+  cursor: pointer;
 }
 
 #count,
@@ -31,8 +36,8 @@
 
 .text,
 .legend {
-  background-color: black;
-  color: grey;
+  background-color: #242423;
+  color: #6c757d;
   border-radius: 5px;
   padding: 5px 10px;
   margin: 10px;
@@ -51,10 +56,11 @@
 .seat {
   width: 40px;
   height: 40px;
-  background-color: grey;
+  background-color: #6c757d;
   border-top-left-radius: 50%;
   border-top-right-radius: 50%;
   margin: 5px;
+  cursor: pointer;
 }
 
 .seat:nth-child(2) {
@@ -66,11 +72,11 @@
 }
 
 .seat.occupied {
-  background-color: red;
+  background-color: #e63946;
 }
 
 .seat.selected {
-  background-color: green;
+  background-color: #2c6e49;
 }
 .legend {
   display: flex;
